--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li class="nav-item "><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a  id="modalLogin">
+                    <a type="button" id="modalLogin">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
@@ -90,7 +90,7 @@
                             <div class="modal-dialog modal-lg" role="content">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h4 class="modal-title text-dark">Reserve a Table</h4>
+                                        <h4 class="modal-title">Reserve a Table</h4>
                                         <button type="button" class="close" data-dismiss="modal">
                                             &times;
                                         </button>
@@ -369,41 +369,8 @@
             });
         });
     </script>-->
-    <script>
-        $(document).ready(function(){
-            $("#mycarousel").carousel( { interval: 2000 } );
-                $("#carouselButton").click(function(){
-                    if($('#carouselButton').children('span').hasClass('fa-pause')){
-                        $("#mycarousel").carousel('pause');
-                        $('#carouselButton').children('span').removeClass('fa-pause');
-                        $('#carouselButton').children('span').addClass('fa-play');
-                    }
-                    else if($('#carouselButton').children('span').hasClass('fa-play')){
-                        $("#mycarousel").carousel('cycle');
-                        $('#carouselButton').children('span').removeClass('fa-play');
-                        $('#carouselButton').children('span').addClass('fa-pause');
-                    }
-                });
-        });    
-    </script>
-    <script>
-        $(document).ready(function(){
-            $("#modalReserve").click(function(){
-                $('#reserveModal').modal('toggle');
-                $('#reserveModal').modal('show');
-                $('#reserveModal').modal('hide');
-            });
-        });    
-    </script>
-    <script>
-        $(document).ready(function(){
-            $("#modalLogin").click(function(){
-                $('#loginModal').modal('toggle');
-                $('#loginModal').modal('show');
-                $('#loginModal').modal('hide');
-            });
-        });    
-    </script>
+    <script src="./js/script.js"></script>
+   
     
 </body>
 
